# PyTorch-Machine-Learning_Chapter-03_Quadratic-Function

./: .gitignore  README.md  infer.py  pyproject.toml  train.py
configs/: train.yaml  train_overfitting.yaml
data/: functions.py
models/: model.py
