[project]
name = "pytorch-machine-learning-chapter03"
version = "0.1.0"
requires-python = ">=3.14.3"
dependencies = [
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.9",
    "pyyaml>=6.0.3",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
